fix for occasional overflowing quote marks

--- a/2017/assets/sass/_quotes.scss
+++ b/2017/assets/sass/_quotes.scss
@@ -12,7 +12,7 @@
   }
   &:before {
     content:"\201C";
-    font-size: 3.4em;
+    font-size: 102px;
     position: absolute;
     left: 0;
     top: 0.5em;
@@ -84,7 +84,7 @@
     padding-left: 1.5em;
   }
   &:before {
-    font-size: 2em;
+    font-size: 40px;
     top: 0;
   }
   cite {
